input-alignment problem solve

--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@
 .input-box input:focus~label,
 .input-box input:valid~label{
     top: -1px;
-    /* animation: label 2s ease-in; */
 }
 
 .input-box input{
@@ -76,7 +75,6 @@
     width: 100%;
     height: 40px;
     top: 30px;
-    /* left: 5px; */
     background: transparent;
     border: none;
     outline: none;
@@ -91,20 +89,8 @@
     font-size: 500;
     pointer-events: none;
     transition: .5s;
-    /* animation: label 2s ease-out; */
 }
 
-/* @keyframes label {
-    0% {
-      transform: scale(1, 1);
-    }
-    50% {
-      transform: scale(1.5, 1.5);
-    }
-    100% {
-      transform: scale(1, 1);
-    }
-  } */
 .input-box a{
     position: relative;
     top: 40px;
